instantiate predictor (end pt) and then calling .predict works

--- a/fraudDetection/randomCut.ipynb
+++ b/fraudDetection/randomCut.ipynb
@@ -1093,30 +1093,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rcf_interference' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrcf_interference\u001b[49m\u001b[38;5;241m.\u001b[39mserializer \u001b[38;5;241m=\u001b[39m CSVSerializer()\n\u001b[1;32m      2\u001b[0m rcf_interference\u001b[38;5;241m.\u001b[39mdeserializer \u001b[38;5;241m=\u001b[39m JSONDeserializer()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rcf_interference' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "rcf_interference.serializer = CSVSerializer()\n",
-    "rcf_interference.deserializer = JSONDeserializer()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "tags": []
@@ -1149,45 +1125,6 @@
     "# Call the function and print the list of predictor names\n",
     "predictor_names = list_predictors()\n",
     "print(predictor_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "machine_data_numpy = df.value.to_numpy().reshape(-1, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[69.88083514],\n",
-       "       [71.22022706],\n",
-       "       [70.87780496],\n",
-       "       ...,\n",
-       "       [72.04656545],\n",
-       "       [71.82522648],\n",
-       "       [72.58408858]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "machine_data_numpy"
    ]
   },
   {
@@ -1228,6 +1165,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sagemaker.predictor import Predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictor = Predictor(endpoint_name='randomcutforest-2023-12-08-05-56-39-318')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sagemaker.serializers import CSVSerializer\n",
+    "from sagemaker.deserializers import JSONDeserializer\n",
+    "predictor.serializer = CSVSerializer()\n",
+    "predictor.deserializer = JSONDeserializer()\n",
+    "machine_data_numpy = df.value.to_numpy().reshape(-1, 1)\n",
+    "\n",
+    "results = predictor.predict(\n",
+    "    machine_data_numpy[:6], initial_args={\"ContentType\": \"text/csv\", \"Accept\": \"application/json\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scores': [{'score': 1.9994143287},\n",
+       "  {'score': 1.8520433754},\n",
+       "  {'score': 1.8688213363},\n",
+       "  {'score': 2.2166723051},\n",
+       "  {'score': 2.1338577115},\n",
+       "  {'score': 1.9616374743}]}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## prediction using invoke_endpoint not working"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {
     "tags": []
@@ -1253,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -1265,7 +1286,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModelError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Invoke the endpoint\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43msagemaker_runtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke_endpoint\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEndpointName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrandomcutforest-2023-12-08-05-56-39-318\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mContentType\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapplication/json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mAccept\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapplication/json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mBody\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mserialized_data\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[39], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Invoke the endpoint\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43msagemaker_runtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke_endpoint\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEndpointName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrandomcutforest-2023-12-08-05-56-39-318\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mContentType\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext/csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mAccept\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapplication/json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mBody\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mserialized_data\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:553\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    549\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    550\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    551\u001b[0m     )\n\u001b[1;32m    552\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 553\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:1009\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1005\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1006\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1007\u001b[0m     )\n\u001b[1;32m   1008\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1009\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1010\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1011\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
       "\u001b[0;31mModelError\u001b[0m: An error occurred (ModelError) when calling the InvokeEndpoint operation: Received client error (400) from model with message \"unable to evaluate payload provided\". See https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=us-east-1#logEventViewer:group=/aws/sagemaker/Endpoints/randomcutforest-2023-12-08-05-56-39-318 in account 287758680514 for more information."
@@ -1277,7 +1298,7 @@
     "# Invoke the endpoint\n",
     "response = sagemaker_runtime.invoke_endpoint(\n",
     "    EndpointName='randomcutforest-2023-12-08-05-56-39-318',\n",
-    "    ContentType='application/json',\n",
+    "    ContentType='text/csv',\n",
     "    Accept= 'application/json',\n",
     "    Body=serialized_data\n",
     ")"
@@ -1364,6 +1385,247 @@
    ],
    "source": [
     "df['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sagemaker-example-files-prod-us-east-1'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "region=boto3.Session().region_name\n",
+    "\n",
+    "downloaded_data_prefix = \"datasets/tabular/anomaly_benchmark_taxi\"\n",
+    "data_filename = \"NAB_nyc_taxi.csv\"\n",
+    "downloaded_data_bucket = f\"sagemaker-example-files-prod-{region}\"\n",
+    "downloaded_data_prefix = \"datasets/tabular/anomaly_benchmark_taxi\"\n",
+    "\n",
+    "data_filename = \"NAB_nyc_taxi.csv\"\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "s3.download_file(downloaded_data_bucket, f\"{downloaded_data_prefix}/{data_filename}\", data_filename)\n",
+    "taxi_data = pd.read_csv(data_filename, delimiter=\",\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-01 00:00:00</td>\n",
+       "      <td>10844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-07-01 00:30:00</td>\n",
+       "      <td>8127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-07-01 01:00:00</td>\n",
+       "      <td>6210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-07-01 01:30:00</td>\n",
+       "      <td>4656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-07-01 02:00:00</td>\n",
+       "      <td>3820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10315</th>\n",
+       "      <td>2015-01-31 21:30:00</td>\n",
+       "      <td>24670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10316</th>\n",
+       "      <td>2015-01-31 22:00:00</td>\n",
+       "      <td>25721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10317</th>\n",
+       "      <td>2015-01-31 22:30:00</td>\n",
+       "      <td>27309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10318</th>\n",
+       "      <td>2015-01-31 23:00:00</td>\n",
+       "      <td>26591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10319</th>\n",
+       "      <td>2015-01-31 23:30:00</td>\n",
+       "      <td>26288</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10320 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 timestamp  value\n",
+       "0      2014-07-01 00:00:00  10844\n",
+       "1      2014-07-01 00:30:00   8127\n",
+       "2      2014-07-01 01:00:00   6210\n",
+       "3      2014-07-01 01:30:00   4656\n",
+       "4      2014-07-01 02:00:00   3820\n",
+       "...                    ...    ...\n",
+       "10315  2015-01-31 21:30:00  24670\n",
+       "10316  2015-01-31 22:00:00  25721\n",
+       "10317  2015-01-31 22:30:00  27309\n",
+       "10318  2015-01-31 23:00:00  26591\n",
+       "10319  2015-01-31 23:30:00  26288\n",
+       "\n",
+       "[10320 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10844, 8127, 6210, ..., 27309, 26591, 26288], dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_data.values[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def shingle(data, shingle_size):\n",
+    "    num_data = len(data)\n",
+    "    shingled_data = np.zeros((num_data - shingle_size, shingle_size))\n",
+    "\n",
+    "    for n in range(num_data - shingle_size):\n",
+    "        shingled_data[n] = data[n : (n + shingle_size)]\n",
+    "    return shingled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10844.  8127.  6210. ... 21733. 20104. 16111.]\n",
+      " [ 8127.  6210.  4656. ... 20104. 16111. 13370.]\n",
+      " [ 6210.  4656.  3820. ... 16111. 13370.  9945.]\n",
+      " ...\n",
+      " [26874. 26928. 26000. ... 23719. 24670. 25721.]\n",
+      " [26928. 26000. 25778. ... 24670. 25721. 27309.]\n",
+      " [26000. 25778. 23304. ... 25721. 27309. 26591.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shingle_size = 48\n",
+    "\n",
+    "taxi_data_shingled = shingle(taxi_data.values[:, 1], shingle_size)\n",
+    "print(taxi_data_shingled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10272, 48)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_data_shingled.shape"
    ]
   },
   {
