--- a/fraudDetection/randomCut.ipynb
+++ b/fraudDetection/randomCut.ipynb
@@ -17,7 +17,8 @@
     }
    ],
    "source": [
-    "from sagemaker import RandomCutForest\n"
+    "from sagemaker import RandomCutForest\n",
+    "# test update"
    ]
   },
   {
