--- a/fraudDetection/randomCut.ipynb
+++ b/fraudDetection/randomCut.ipynb
@@ -17,8 +17,7 @@
     }
    ],
    "source": [
-    "from sagemaker import RandomCutForest\n",
-    "# test update"
+    "from sagemaker import RandomCutForest"
    ]
   },
   {
@@ -46,12 +45,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
       "Using Role: arn:aws:iam::287758680514:role/service-role/AmazonSageMaker-ExecutionRole-20231027T004238\n"
      ]
     },
@@ -210,7 +203,8 @@
     }
    ],
    "source": [
-    "df"
+    "df\n",
+    "#test commit"
    ]
   },
   {
@@ -468,7 +462,7 @@
    "source": [
     "anomaly_points = [\n",
     "        [\"2013-12-10 06:25:00.000000\",\"2013-12-12 05:35:00.000000\"],\n",
-    "        [\"2013-12-15 17:50:00.000000\",\"2013-12-17 17:00:00.000000\"],\n",
+    "        [\"2013-12-15 17:50:00.000000\",\"2013-12-17 17:00:00.000000\"],x\n",
     "        [\"2014-01-27 14:20:00.000000\",\"2014-01-29 13:30:00.000000\"],\n",
     "        [\"2014-02-07 14:55:00.000000\",\"2014-02-09 14:05:00.000000\"]\n",
     "]"
@@ -617,6 +611,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>timestamp</th>\n",
        "      <th>value</th>\n",
        "      <th>year</th>\n",
        "      <th>month</th>\n",
@@ -625,20 +620,11 @@
        "      <th>minute</th>\n",
        "      <th>anomaly</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>timestamp</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-07-04 00:00:00</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-07-04 00:00:00</td>\n",
        "      <td>69.880835</td>\n",
        "      <td>2013</td>\n",
        "      <td>7</td>\n",
@@ -648,7 +634,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-07-04 01:00:00</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-07-04 01:00:00</td>\n",
        "      <td>71.220227</td>\n",
        "      <td>2013</td>\n",
        "      <td>7</td>\n",
@@ -658,7 +645,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-07-04 02:00:00</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-07-04 02:00:00</td>\n",
        "      <td>70.877805</td>\n",
        "      <td>2013</td>\n",
        "      <td>7</td>\n",
@@ -668,7 +656,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-07-04 03:00:00</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-07-04 03:00:00</td>\n",
        "      <td>68.959400</td>\n",
        "      <td>2013</td>\n",
        "      <td>7</td>\n",
@@ -678,7 +667,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-07-04 04:00:00</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-07-04 04:00:00</td>\n",
        "      <td>69.283551</td>\n",
        "      <td>2013</td>\n",
        "      <td>7</td>\n",
@@ -696,9 +686,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-05-28 11:00:00</th>\n",
+       "      <th>7262</th>\n",
+       "      <td>2014-05-28 11:00:00</td>\n",
        "      <td>72.370206</td>\n",
        "      <td>2014</td>\n",
        "      <td>5</td>\n",
@@ -708,7 +700,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-05-28 12:00:00</th>\n",
+       "      <th>7263</th>\n",
+       "      <td>2014-05-28 12:00:00</td>\n",
        "      <td>72.172956</td>\n",
        "      <td>2014</td>\n",
        "      <td>5</td>\n",
@@ -718,7 +711,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-05-28 13:00:00</th>\n",
+       "      <th>7264</th>\n",
+       "      <td>2014-05-28 13:00:00</td>\n",
        "      <td>72.046565</td>\n",
        "      <td>2014</td>\n",
        "      <td>5</td>\n",
@@ -728,7 +722,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-05-28 14:00:00</th>\n",
+       "      <th>7265</th>\n",
+       "      <td>2014-05-28 14:00:00</td>\n",
        "      <td>71.825226</td>\n",
        "      <td>2014</td>\n",
        "      <td>5</td>\n",
@@ -738,7 +733,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-05-28 15:00:00</th>\n",
+       "      <th>7266</th>\n",
+       "      <td>2014-05-28 15:00:00</td>\n",
        "      <td>72.584089</td>\n",
        "      <td>2014</td>\n",
        "      <td>5</td>\n",
@@ -749,25 +745,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7267 rows × 7 columns</p>\n",
+       "<p>7267 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         value  year  month  day  hour  minute  anomaly\n",
-       "timestamp                                                              \n",
-       "2013-07-04 00:00:00  69.880835  2013      7    4     0       0        0\n",
-       "2013-07-04 01:00:00  71.220227  2013      7    4     1       0        0\n",
-       "2013-07-04 02:00:00  70.877805  2013      7    4     2       0        0\n",
-       "2013-07-04 03:00:00  68.959400  2013      7    4     3       0        0\n",
-       "2013-07-04 04:00:00  69.283551  2013      7    4     4       0        0\n",
-       "...                        ...   ...    ...  ...   ...     ...      ...\n",
-       "2014-05-28 11:00:00  72.370206  2014      5   28    11       0        0\n",
-       "2014-05-28 12:00:00  72.172956  2014      5   28    12       0        0\n",
-       "2014-05-28 13:00:00  72.046565  2014      5   28    13       0        0\n",
-       "2014-05-28 14:00:00  71.825226  2014      5   28    14       0        0\n",
-       "2014-05-28 15:00:00  72.584089  2014      5   28    15       0        0\n",
+       "               timestamp      value  year  month  day  hour  minute  anomaly\n",
+       "0    2013-07-04 00:00:00  69.880835  2013      7    4     0       0        0\n",
+       "1    2013-07-04 01:00:00  71.220227  2013      7    4     1       0        0\n",
+       "2    2013-07-04 02:00:00  70.877805  2013      7    4     2       0        0\n",
+       "3    2013-07-04 03:00:00  68.959400  2013      7    4     3       0        0\n",
+       "4    2013-07-04 04:00:00  69.283551  2013      7    4     4       0        0\n",
+       "...                  ...        ...   ...    ...  ...   ...     ...      ...\n",
+       "7262 2014-05-28 11:00:00  72.370206  2014      5   28    11       0        0\n",
+       "7263 2014-05-28 12:00:00  72.172956  2014      5   28    12       0        0\n",
+       "7264 2014-05-28 13:00:00  72.046565  2014      5   28    13       0        0\n",
+       "7265 2014-05-28 14:00:00  71.825226  2014      5   28    14       0        0\n",
+       "7266 2014-05-28 15:00:00  72.584089  2014      5   28    15       0        0\n",
        "\n",
-       "[7267 rows x 7 columns]"
+       "[7267 rows x 8 columns]"
       ]
      },
      "execution_count": 20,
@@ -1130,16 +1125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "machine_data_numpy = data.value.to_numpy().reshape(-1, 1)"
+    "machine_data_numpy = df.value.to_numpy().reshape(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -1155,7 +1152,7 @@
        "       [70.06096581]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -1177,31 +1174,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictor = Predictor(endpoint_name='randomcutforest-2023-12-08-05-56-39-318')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModelNotReadyException",
+     "evalue": "An error occurred (ModelNotReadyException) when calling the InvokeEndpoint operation (reached max retries: 4): Model for endpoint randomcutforest-2023-12-08-05-56-39-318 variant AllTraffic is not ready for inference yet.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModelNotReadyException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m predictor\u001b[38;5;241m.\u001b[39mdeserializer \u001b[38;5;241m=\u001b[39m JSONDeserializer()\n\u001b[1;32m      5\u001b[0m machine_data_numpy \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mvalue\u001b[38;5;241m.\u001b[39mto_numpy()\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mpredictor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmachine_data_numpy\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_args\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mContentType\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtext/csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAccept\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapplication/json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m}\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/sagemaker/base_predictor.py:206\u001b[0m, in \u001b[0;36mPredictor.predict\u001b[0;34m(self, data, initial_args, target_model, target_variant, inference_id, custom_attributes, component_name)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m inference_component_name:\n\u001b[1;32m    204\u001b[0m     request_args[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInferenceComponentName\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m inference_component_name\n\u001b[0;32m--> 206\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msagemaker_session\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msagemaker_runtime_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke_endpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrequest_args\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_response(response)\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:553\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    549\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    550\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    551\u001b[0m     )\n\u001b[1;32m    552\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 553\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:1009\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1005\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1006\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1007\u001b[0m     )\n\u001b[1;32m   1008\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1009\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1010\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1011\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
+      "\u001b[0;31mModelNotReadyException\u001b[0m: An error occurred (ModelNotReadyException) when calling the InvokeEndpoint operation (reached max retries: 4): Model for endpoint randomcutforest-2023-12-08-05-56-39-318 variant AllTraffic is not ready for inference yet."
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.serializers import CSVSerializer\n",
     "from sagemaker.deserializers import JSONDeserializer\n",
@@ -1216,25 +1219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'scores': [{'score': 1.9994143287},\n",
-       "  {'score': 1.8520433754},\n",
-       "  {'score': 1.8688213363},\n",
-       "  {'score': 2.2166723051},\n",
-       "  {'score': 2.1338577115},\n",
-       "  {'score': 1.9616374743}]}"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresults\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
     }
    ],
    "source": [
